fix: # Fixes issue #1